--- a/NotepadMT.rc
+++ b/NotepadMT.rc
@@ -175,7 +175,8 @@ BEGIN
 	BEGIN
 		MENUITEM "&New Window",                 ID_WINDOW_NEW
 		MENUITEM "&Cascade",                    ID_WINDOW_CASCADE
-		MENUITEM "&Tile",                       ID_WINDOW_TILE_HORZ
+		MENUITEM "Tile &Horizontally",                       ID_WINDOW_TILE_HORZ
+		MENUITEM "Tile &Vertically",                       ID_WINDOW_TILE_VERT
 		MENUITEM "&Arrange Icons",              ID_WINDOW_ARRANGE
 	END
 	POPUP "&Help"
