--- a/NotepadMT.rc
+++ b/NotepadMT.rc
@@ -120,6 +120,7 @@ BEGIN
 		MENUITEM "&Open...\tCtrl+O",            ID_FILE_OPEN
 		MENUITEM SEPARATOR
 		MENUITEM "P&rint Setup...",             ID_FILE_PRINT_SETUP
+		MENUITEM "Pa&ge Setup...",             ID_FILE_PAGE_SETUP
 		MENUITEM SEPARATOR
 		MENUITEM "Recent File",                 ID_FILE_MRU_FILE1,GRAYED
 		MENUITEM SEPARATOR
@@ -152,6 +153,7 @@ BEGIN
 		MENUITEM "&Print...\tCtrl+P",           ID_FILE_PRINT
 		MENUITEM "Print Pre&view",              ID_FILE_PRINT_PREVIEW
 		MENUITEM "P&rint Setup...",             ID_FILE_PRINT_SETUP
+		MENUITEM "Pa&ge Setup...",             ID_FILE_PAGE_SETUP
 		MENUITEM SEPARATOR
 		MENUITEM "Sen&d...",					ID_FILE_SEND_MAIL
 		MENUITEM SEPARATOR
