--- a/NotepadMT.rc
+++ b/NotepadMT.rc
@@ -187,8 +187,9 @@ BEGIN
 		MENUITEM "Speak &Document\tF5",                  ID_TTS_SPEAKDOC
 		MENUITEM "Speak &Selected Text\tCtrl+F5",                  ID_TTS_SPEAKSEL
 		MENUITEM "&Pause\tF6",                  ID_TTS_PAUSE
-		MENUITEM "&Stop\tF7",                  ID_TTS_STOP
+		MENUITEM "S&top\tF7",                  ID_TTS_STOP
 		MENUITEM "Convert document to &WAV\tF8",                  ID_TTS_CREATEWAV
+		MENUITEM "P&lay WAV\tCTRL+F8",                  ID_TTS_CREATEWAV
 	END
 	POPUP "&View"
 	BEGIN
@@ -247,6 +248,7 @@ BEGIN
 	VK_F6,          ID_TTS_PAUSE,         VIRTKEY
 	VK_F7,          ID_TTS_STOP,         VIRTKEY
 	VK_F8,          ID_TTS_CREATEWAV,         VIRTKEY
+	VK_F8,          ID_TTS_PLAYWAV,         VIRTKEY,CONTROL
 	"T",            ID_VIEW_TOOLBAR,        VIRTKEY,CONTROL
 	"U",            ID_VIEW_STATUS_BAR,        VIRTKEY,CONTROL
 	VK_BACK,        ID_EDIT_UNDO,           VIRTKEY,ALT
