Fixed typo in Speak menu and added ... to the end of WAV file menu items.

--- a/NotepadMT.rc
+++ b/NotepadMT.rc
@@ -188,8 +188,8 @@ BEGIN
 		MENUITEM "Speak &Selected Text\tCtrl+F5",                  ID_TTS_SPEAKSEL
 		MENUITEM "&Pause\tF6",                  ID_TTS_PAUSE
 		MENUITEM "S&top\tF7",                  ID_TTS_STOP
-		MENUITEM "Convert document to &WAV\tF8",                  ID_TTS_CREATEWAV
-		MENUITEM "P&lay WAV\tCTRL+F8",                  ID_TTS_CREATEWAV
+		MENUITEM "Convert document to &WAV...\tF8",                  ID_TTS_CREATEWAV
+		MENUITEM "P&lay WAV...\tCTRL+F8",                  ID_TTS_PLAYWAV
 	END
 	POPUP "&View"
 	BEGIN
