--- a/NotepadMT.rc
+++ b/NotepadMT.rc
@@ -190,6 +190,7 @@ BEGIN
 		MENUITEM "S&top\tF7",                  ID_TTS_STOP
 		MENUITEM "Convert document to &WAV...\tF8",                  ID_TTS_CREATEWAV
 		MENUITEM "P&lay WAV...\tCTRL+F8",                  ID_TTS_PLAYWAV
+		MENUITEM "&Reinitialize SAPI\tF9",                  ID_TTS_RESET
 	END
 	POPUP "&View"
 	BEGIN
@@ -249,6 +250,7 @@ BEGIN
 	VK_F7,          ID_TTS_STOP,         VIRTKEY
 	VK_F8,          ID_TTS_CREATEWAV,         VIRTKEY
 	VK_F8,          ID_TTS_PLAYWAV,         VIRTKEY,CONTROL
+	VK_F9,          ID_TTS_RESET,         VIRTKEY
 	"T",            ID_VIEW_TOOLBAR,        VIRTKEY,CONTROL
 	"U",            ID_VIEW_STATUS_BAR,        VIRTKEY,CONTROL
 	VK_BACK,        ID_EDIT_UNDO,           VIRTKEY,ALT
