--- a/NotepadMT.rc
+++ b/NotepadMT.rc
@@ -251,6 +251,10 @@ BEGIN
 	VK_F8,          ID_TTS_CREATEWAV,         VIRTKEY
 	VK_F8,          ID_TTS_PLAYWAV,         VIRTKEY,CONTROL
 	VK_F9,          ID_TTS_RESET,         VIRTKEY
+	VK_PRIOR,          ID_TTS_RATEUP,         VIRTKEY,CONTROL,ALT
+	VK_NEXT,          ID_TTS_RATEDOWN,         VIRTKEY,CONTROL,ALT
+	VK_UP,          ID_TTS_VOLUMEUP,         VIRTKEY,CONTROL,ALT
+	VK_DOWN,          ID_TTS_VOLUMEDOWN,         VIRTKEY,CONTROL,ALT
 	"T",            ID_VIEW_TOOLBAR,        VIRTKEY,CONTROL
 	"U",            ID_VIEW_STATUS_BAR,        VIRTKEY,CONTROL
 	VK_BACK,        ID_EDIT_UNDO,           VIRTKEY,ALT
