--- a/NotepadMT.rc
+++ b/NotepadMT.rc
@@ -192,7 +192,7 @@ BEGIN
 		MENUITEM "&Fast Forward\tCtrl+F7",                  ID_TTS_FASTFORWARD
 		MENUITEM "Convert document to &WAV...\tF8",                  ID_TTS_CREATEWAV
 		MENUITEM "P&lay WAV...\tCtrl+F8",                  ID_TTS_PLAYWAV
-		MENUITEM "&Reinitialize SAPI\tF9",                  ID_TTS_RESET
+		MENUITEM "Re&initialize SAPI\tF9",                  ID_TTS_RESET
 		MENUITEM "Enable &XML tag processing\tF4",                  ID_TTS_XMLPROC
 	END
 	POPUP "&View"
